--- a/resume.tex
+++ b/resume.tex
@@ -83,7 +83,7 @@
 }
 
 \newcommand{\resumeJobHeading}[5]{
-  \item
+	\item
 	\begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
 		{\textbf{#1} $|$ \emph{#2}} & #3 \\
 		\textit{\small#4} & \textit{\small #5} \\
@@ -92,8 +92,8 @@
 
 \newcommand{\resumeProjectHeading}[3]{
 	\item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      {\textbf{#1} $|$ \emph{#2}} & #3 \\
+	\begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+		{\textbf{#1} $|$ \emph{#2}} & #3 \\
 	\end{tabular*}\vspace{-7pt}
 }
 
@@ -102,17 +102,17 @@
 \renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
 \newcommand{\resumeSubHeadingListStart}{
-  \begin{itemize}[leftmargin=0.15in, label={}]
-}
-\newcommand{\resumeSubHeadingListEnd}{
-\end{itemize}
+	\begin{itemize}[leftmargin=0.15in, label={}]
+		}
+		\newcommand{\resumeSubHeadingListEnd}{
+	\end{itemize}
 }
 
 \newcommand{\resumeItemListStart}{
-  \begin{itemize}
-}
-\newcommand{\resumeItemListEnd}{
-\end{itemize}\vspace{-5pt}
+	\begin{itemize}
+		}
+		\newcommand{\resumeItemListEnd}{
+	\end{itemize}\vspace{-5pt}
 }
 
 %------------RESUME STARTS HERE------------
@@ -121,11 +121,15 @@
 
 \begin{center}
 	\textbf{\Huge \scshape Michael Zappa} \\ \vspace{1pt}
-	\small 952-388-7465 $|$
-  \href{mailto:zappa.m@northeastern.edu}{\underline{zappa.m@northeastern.edu}} $|$
-	\href{https://gitlab.com/michzappa}{\underline{gitlab.com/michzappa}} $|$
-	\href{https://github.com/michzappa}{\underline{github.com/michzappa}} $|$
-  \href{https://www.linkedin.com/in/michael-zappa/}{\underline{linkedin.com/in/michael-zappa}}
+	\small (+1) 952-388-7465 $|$
+	\href{mailto:me@michzappa.com}{\underline{me@michzappa.com}} $|$
+	% \href{https://gitlab.com/michzappa}{\underline{gitlab.com/michzappa}} $|$
+	% \href{https://github.com/michzappa}{\underline{github.com/michzappa}}
+	% \newline
+	\href{https://michzappa.com}{\underline{michzappa.com}} $|$
+	\href{https://www.linkedin.com/in/michael-zappa/}{\underline{linkedin.com/in/michael-zappa}}
+    \break
+    Available July 2023.
 \end{center}
 
 %------------EDUCATION------------
@@ -136,7 +140,7 @@
 {Bachelor of Science in Computer Science, Minor in Linguistics}{Aug. 2018 -- May 2023}
 \resumeItemListStart
 \resumeItem{GPA: 3.9/4.0, Dean's List all semesters, Honors Program.}
-\resumeItem{Relevant Coursework: Computer Systems, Networks and Distributed Systems, Systems Security, Object Oriented Design, Algorithms and Data Structures, Foundations of Cybersecurity, Programming Languages.}
+\resumeItem{Relevant Coursework: Software Engineering, Compilers, Computer Systems, Networks and Distributed Systems, Systems Security, Programming Languages, Object Oriented Design, Algorithms and Data Structures, Foundations of Cybersecurity.}
 \resumeItem{Attended Dialogue of Civilization in the North of Ireland focused on the role of storytelling in community activism, conflict resolution, and conflicted identities.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
@@ -145,19 +149,31 @@
 \section{Experience}
 \resumeSubHeadingListStart
 \resumeJobHeading
+{SDE Co-Op} {Java, Amazon Web Services} {July 2022 -- December 2022}
+{Amazon Global Robotics}{Westborough, MA}
+\resumeItemListStart
+\resumeItem{Participated in organization-wide Innovation project concerning robotic movement.}
+\resumeItem{Debugged production service issues and supported on-call teammates.}
+\resumeItem{Performed critical load-balancer partition and migration for team's core service.}
+\resumeItem{Took ownership of service on deprecation path; addressed risks, communicated with customers, began deletion.}
+\resumeItem{Investigated and justified team-level decisions for service architecture.}
+\resumeItem{Created, modified, and deleted alarms across multiple services and regions.}
+\resumeItem{Engaged with the wider Amazon community, particularly in the open-source software arena.}
+\resumeItemListEnd
+
+\resumeJobHeading
 {Software Developer Co-Op} {Ruby on Rails, Oracle SQL} {July 2021 -- January 2022}
-{Smartleaf}{Boston, MA}
+{Smartleaf, Inc}{Boston, MA}
 \resumeItemListStart
 \resumeItem{Specified, implemented, and tested API endpoints requested by clients in the wealth management industry.}
 \resumeItem{Patched sequence bug in Ruby database adapter when importing large batches of rows.}
 \resumeItem{Conducted security audit and corresponding upgrades of Ruby and JavaScript dependencies.}
-\resumeItem{Engaged in cross-functional effort to fix third-party data transfer in production.}
-\resumeItem{Prepared application for transition from Oracle SQL to PostgreSQL.}
-\resumeItem{Created automated performance and A/B tests of application across different environments and databases.}
+\resumeItem{Worked with internal wealth management team to fix third-party data transfer in production.}
+\resumeItem{Created automated performance and A/B tests of application across different environments.}
 \resumeItem{Coordinated release pipeline between developer and business teams.}
 \resumeItem{Fulfilled client deliverables ahead of schedule.}
-\resumeItem{Participated in hiring process for new co-ops and permanent team members.}
-\resumeItem{Onboarded new team members at multiple levels of seniority.}
+\resumeItem{Interviewed and onboarded new team members at multiple levels of seniority.}
+% \resumeItem{Prepared application for transition from Oracle SQL to PostgreSQL.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -165,37 +181,52 @@
 \section{Projects}
 \resumeSubHeadingListStart
 \resumeProjectHeading
-{\textbf{Husky Hunt Helper}} {TypeScript, Node.js, SQLite, React Native} {April 2020 -- August 2020}
+{\textbf{Klox Language}} {Kotlin, Gradle} {August 2022 - September 2022}
 \resumeItemListStart
-\resumeItem{Led back-end and mobile development for a team creating a web/mobile app to facilitate the scavenger hunt put on by Northeastern University.}
-\resumeItem{Designed a web server to manage the uploading, categorizing, and reading of groups, paths, and clues.}
-\resumeItem{Developed mobile app to give directions to clues around Boston and upload photos to the server.}
+\resumeItem{Implemented an interpreter{\textsuperscript{{\href{https://gitlab.com/michzappa/klox}{[{\color{red}1}]}}}} for the Lox programming language in Kotlin.}
+\resumeItem{Extended language to include native lists and standard library.}
+\resumeItem{Attempted additional compilation to Scheme, challenged by the difference in semantics between the two languages.}
 \resumeItemListEnd
+
 \resumeProjectHeading
-{\textbf{Fish Card Game(s)}} {Node.js, React, GraphQL, Elixir, Phoenix, PostgreSQL} {April 2020 -- August 2020}
+{\textbf{Web Development}} {TypeScript, Elixir, Node.js, React, Phoenix, SQL} {April 2020 -- August 2020}
 \resumeItemListStart
-\resumeItem{Created web apps to play ``Fish'' card game with friends remotely during COVID-19 pandemic.}
-\resumeItem{Implemented multiple REST web servers to process and store data using Express.js, GraphQL, and Phoenix.}
-\resumeItem{Developed front-end for REST servers using React.}
-\resumeItem{Utilized Phoenix LiveView to create an application with real-time view updates using built-in websockets.}
+\resumeItem{Led back-end and mobile development for an application{\textsuperscript{{\href{https://github.com/HuskyHunties}{[{\color{red}1}]}}}} to facilitate a 24-hour scavenger hunt.}
+\resumeItem{Created multiple websites{\textsuperscript{{\href{https://gitlab.com/michzappa/fish-express}{[{\color{red}1}]}}{\href{https://gitlab.com/michzappa/fish-graphql}{[{\color{green}2}]}}{\href{https://gitlab.com/michzappa/fish-phoenix}{[{\color{blue}3}]}}{\href{https://gitlab.com/michzappa/fish-phoenix-live}{[{\color{cyan}4}]}}}} to play ``Fish'' card game with friends remotely during COVID-19 pandemic.}
+\resumeItem{Implemented back-ends in Typescript and Elixir to serve REST APIs.}
+\resumeItem{Developed front-ends using React/Phoenix/React Native.}
 \resumeItemListEnd
+
+% \resumeProjectHeading
+% {\textbf{Husky Hunt Helper}} {TypeScript, Node.js, SQLite, React Native} {April 2020 -- August 2020}
+% \resumeItemListStart
+% \resumeItem{Led back-end and mobile development for a team creating a web/mobile app to facilitate the scavenger hunt put on by Northeastern University.}
+% \resumeItem{Designed a web server to manage the uploading, categorizing, and reading of groups, paths, and clues.}
+% \resumeItem{Developed mobile app to give directions to clues around Boston and upload photos to the server.}
+% \resumeItemListEnd
+% \resumeProjectHeading
+% {\textbf{Fish Card Game(s)}} {Node.js, React, GraphQL, Elixir, Phoenix, PostgreSQL} {April 2020 -- August 2020}
+% \resumeItemListStart
+% \resumeItem{Created web apps to play ``Fish'' card game with friends remotely during COVID-19 pandemic.}
+% \resumeItem{Implemented multiple REST web servers to process and store data using Express.js, GraphQL, and Phoenix.}
+% \resumeItem{Developed front-end for REST servers using React.}
+% \resumeItem{Utilized Phoenix LiveView to create an application with real-time view updates using built-in websockets.}
+% \resumeItemListEnd
 \resumeSubHeadingListEnd
 
 %------------TECHNICAL SKILLS------------
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
 	\small{\item{
-	      \textbf{Languages}{: Ruby, Java, Node.js, Python, Rust, Elixir, C/C++, SQL} \\
-	      \textbf{Frameworks}{: Rails, React, Swing, Phoenix} \\
-	      \textbf{Developer Tools}{: Emacs, Git, Jira, JetBrains}\\
-	      \textbf{OS}{: Linux, MacOS, Windows}
-	      }}
-    \end{itemize}
+		            \textbf{Languages}{: Java, TypeScript, OCaml, Ruby, C/C++, SQL} \\
+		            \textbf{OS}{: Linux, MacOS}
+		      }}
+\end{itemize}
 
 %---------------INTERESTS------------
 \section{Interests}
 \resumeItemListStart
-\resumeItem{Computing: Reproducible packages and systems, functional and natural language programming, formal verification.}
+\resumeItem{Computing: Reproducible packages and systems, programming languages and compilers, formal verification.}
 \resumeItem{Other: Linguistics and foreign languages, high fantasy novels, geography, rugby, motorsport.}
 \resumeItemListEnd
 
